--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
 				</nav>
 				<div class="top-phone">
 					<a href="tel:+79511527852">+7 (495) 888-88-88</a>
-					<a href=""><span>Закказать обратный звонок</span></a>
+					<a href="#"  class="modal1" id="#callback1" ><span>Закказать обратный звонок</span></a>
 				</div>
 			</div>
 		</div>
@@ -120,7 +120,7 @@
 					</div>
 				</div>
 				<div class="center-block">
-					<a href="#home" class="btn">Заказать продукцию</a>
+					<a href="#" class="btn">Заказать продукцию</a>
 				</div>
 			</div>
 		</div>
@@ -167,8 +167,10 @@
 						<li>Множество модификаций</li>
 					</ul>
 				</div>
-
-				<a href="#home" class="btn" data-product="sweaters-model-1">Заказать</a>
+				<form>
+					<a class="btn2" data-product="sweaters-model-1">Заказать</a>
+					<input type="hidden" name="sweaters-model-1">
+				</form>
 			</div>
 			<div class="product">
 				<div class="image-wrapper">
@@ -200,8 +202,10 @@
 						<li>Множество модификаций</li>
 					</ul>
 				</div>
-
-				<a href="#home" class="btn" data-product="sweaters-model-2">Заказать</a>
+				<form>
+					<a class="btn2" data-product="sweaters-model-2">Заказать</a>
+					<input type="hidden" name="sweaters-model-2">
+				</form>
 			</div>
 			<div class="product">
 				<div class="image-wrapper">
@@ -233,8 +237,10 @@
 						<li>Множество модификаций</li>
 					</ul>
 				</div>
-
-				<a href="#home"  class="btn" data-product="sweaters-model-3">Заказать</a>
+				<form action="">
+					<a class="btn2" data-product="sweaters-model-3">Заказать</a>
+					<input type="hidden" name="sweaters-model-3">
+				</form>
 			</div>
 		</div>
 	</div>
@@ -275,8 +281,10 @@
 						<li>Множество модификаций</li>
 					</ul>
 				</div>
-
-				<a href="#home"  class="btn" data-product="t-shirts-model-1">Заказать</a>
+				<form>
+					<a class="btn2" data-product="t-shirts-model-1">Заказать</a>
+					<input type="hidden" name="t-shirts-model-1">
+				</form>
 			</div>
 			<div class="product">
 				<div class="image-wrapper">
@@ -308,8 +316,10 @@
 						<li>Множество модификаций</li>
 					</ul>
 				</div>
-
-				<a href="#home" class="btn" data-product="t-shirts-model-2">Заказать</a>
+				<form>
+					<a class="btn2" data-product="t-shirts-model-2">Заказать</a>
+					<input type="hidden" name="t-shirts-model-2">
+				</form>
 			</div>
 			<div class="product">
 				<div class="image-wrapper">
@@ -341,8 +351,10 @@
 						<li>Множество модификаций</li>
 					</ul>
 				</div>
-
-				<a href="#home" class="btn" data-product="t-shirts-model-3">Заказать</a>
+				<form>
+					<a class="btn2" data-product="t-shirts-model-3">Заказать</a>
+					<input type="hidden" name="t-shirts-model-3">
+				</form>
 			</div>
 		</div>
 	</div>
@@ -383,8 +395,10 @@
 						<li>Множество модификаций</li>
 					</ul>
 				</div>
-
-				<a href="#home" class="btn" data-product="mugs-model-1">Заказать</a>
+				<form>
+					<a class="btn2" data-product="mugs-model-1">Заказать</a>
+					<input type="hidden" name="mugs-model-1">
+				</form>
 			</div>
 			<div class="product">
 				<div class="image-wrapper">
@@ -416,8 +430,10 @@
 						<li>Множество модификаций</li>
 					</ul>
 				</div>
-
-				<a href="#home" class="btn" data-product="mugs-model-2">Заказать</a>
+				<form>
+					<a class="btn2" data-product="mugs-model-2">Заказать</a>
+					<input type="hidden" name="mugs-model-2">
+				</form>
 			</div>
 			<div class="product">
 				<div class="image-wrapper">
@@ -449,8 +465,10 @@
 						<li>Множество модификаций</li>
 					</ul>
 				</div>
-
-				<a href="#home" class="btn" data-product="mugs-model-3">Заказать</a>
+				<form>
+					<a class="btn2" data-product="mugs-model-3">Заказать</a>
+					<input type="hidden" name="mugs-model-3">
+				</form>
 			</div>
         </div>
 	</div>
@@ -629,7 +647,7 @@
 								<div class="size">
 									<p>Ваш размер</p>
 									<input type="text" id="my-size" placeholder="Введите ваш размер" maxlength="2">
-									<a href="" class="btn" id="#callback1">Заказать</a>
+									<a class="btn2">Заказать</a>
 								</div>
 							</div>
 						</div>
@@ -796,7 +814,7 @@
 								<div class="size">
 									<p>Ваш размер</p>
 									<input type="text" id="my-size" placeholder="Введите ваш размер" maxlength="2">
-									<a href="" class="btn" id="#callback2">Заказать</a>
+									<a class="btn2">Заказать</a>
 								</div>
 							</div>
 						</div>
@@ -966,7 +984,7 @@
 								<div class="size">
 									<p>Ваш размер</p>
 									<input type="text" id="my-size" placeholder="Введите ваш размер" maxlength="2">
-									<a href="" class="btn" id="#callback3">Заказать</a>
+									<a class="btn2">Заказать</a>
 								</div>
 							</div>
 						</div>
@@ -993,7 +1011,7 @@
 						eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut <br>
 						enim ad minim veniam, quis nostrud exercitation ullamco laboris <br>
 						ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
-					<a class="btn">Написать Сергею</a>
+					<a class="btn3">Написать Сергею</a>
 				</div>
 			</div>
 			<div class="item">
@@ -1007,7 +1025,7 @@
 						Fugiat distinctio,similique,culpa tempora quibusdam maiores<br>
 						quidem nisi itaque dolores ullam suscipit soluta. Nobis<br>
 						ad in libero cupiditate nulla porro optio!</p>
-					<a class="btn">Написать Сергею</a>
+					<a class="btn3">Написать Сергею</a>
 				</div>
 			</div>
 			<div class="item">
@@ -1021,7 +1039,7 @@
 						Fugiat distinctio,similique,culpa tempora quibusdam maiores<br>
 						quidem nisi itaque dolores ullam suscipit soluta. Nobis<br>
 						ad in libero cupiditate nulla porro optio!</p>
-					<a class="btn">Написать Сергею</a>
+					<a class="btn3">Написать Сергею</a>
 				</div>
 			</div>
 			<div class="item">
@@ -1035,7 +1053,7 @@
 						Fugiat distinctio,similique,culpa tempora quibusdam maiores<br>
 						quidem nisi itaque dolores ullam suscipit soluta. Nobis<br>
 						ad in libero cupiditate nulla porro optio!</p>
-					<a class="btn">Написать Сергею</a>
+					<a class="btn3">Написать Сергею</a>
 				</div>
 			</div>
 		</div>
@@ -1056,10 +1074,10 @@
 				<h3>Успей приобрести авиапродукцию сейчас!</h3>
 				<p>Доставка продукта совершенно бесплатно</p>
 			</div>
-			<form action="" id="callback" method="get">
+			<form action="" id="callback2" method="get">
 				<input type="text" id="name" name="name" placeholder="Введите ваше Имя" required>
 				<input type="text" id="tel" name="tel" placeholder="Введите ваш Телефон" required>
-				<a class="btn" type="submit" id="submit">Получить</a>
+				<a type="submit" href="" class="btn1">Получить</a>
 			</form>
 			<div class="text-form">
 				<p>Мы перезвоним Вам <br>
@@ -1118,15 +1136,14 @@
 				</nav>
 				<div class="footer-phone">
 					<a href="tel:+79511527852">+7 (495) 888-88-88</a>
-					<a href=""><span>Закказать обратный звонок</span></a>
+					<a class="modal1" id="callback3"><span>Закказать обратный звонок</span></a>
 				</div>
 			</div>
 		</div>
 </footer>
 
 
-
-<div id="modal_form1" style="display: none">
+<div id="modal_form" style="display: none">
 	<!-- Сaмo oкнo -->
 	<span id="modal_close"></span>
 	<!-- Кнoпкa зaкрыть -->
@@ -1136,14 +1153,30 @@
 		<input type="text" id="name" name="name" placeholder="Ваше Имя" required>
 		<input type="text" id="tel" name="tel" placeholder="Ваш Телефон" required>
 		<!--<textarea id="msg" name="msg" placeholder="Сообщение..."></textarea>-->
-		<a class="btn" type="submit" id="submit">Отправить</a>
+		<a href="#" class="btn" type="submit" id="modal1">Отправить</a>
+	</form>
+</div>
+<div id="overlay"></div>
+
+
+<div id="modal_form1" style="display: none">
+	<!-- Сaмo oкнo -->
+	<span id="modal_close1"></span>
+	<!-- Кнoпкa зaкрыть -->
+	<!-- Тут любoе сoдержимoе -->
+	<h3>Заполните свои контактные данные</h3>
+	<form action="">
+		<input type="text" id="name" name="name" placeholder="Ваше Имя" required>
+		<input type="text" id="tel" name="tel" placeholder="Ваш Телефон" required>
+		<!--<textarea id="msg" name="msg" placeholder="Сообщение..."></textarea>-->
+		<a href="#" class="btn" type="submit" id="modal1">Отправить</a>
 	</form>
 </div>
 <div id="overlay"></div>
 
 <div id="modal_form2" style="display: none">
 	<!-- Сaмo oкнo -->
-	<span id="modal_close"></span>
+	<span id="modal_close2"></span>
 	<!-- Кнoпкa зaкрыть -->
 	<!-- Тут любoе сoдержимoе -->
 	<h2 id="past">Спасибо,ваша заявка принята!</h2>
@@ -1157,12 +1190,9 @@
 </div>
 <div id="overlay"></div>
 
-
-
-
 <div id="modal_form3" style="display: none">
 	<!-- Сaмo oкнo -->
-	<span id="modal_close"></span>
+	<span id="modal_close3"></span>
 	<!-- Кнoпкa зaкрыть -->
 	<!-- Тут любoе сoдержимoе -->
 	<h3>Введите текст сообщения</h3>
@@ -1170,7 +1200,7 @@
 		<input type="text" id="name" name="name" placeholder="Ваше Имя" required>
 		<input type="text" id="tel" name="mail" placeholder="Ваш емейл" required>
 		<textarea name="" id="msg" cols="200" rows="10" placeholder="Сообщение..." maxlength="200"></textarea>
-		<a class="btn" type="submit" id="submit">Отправить</a>
+		<a href="#" class="btn" type="submit" id="submit">Отправить</a>
 	</form>
 </div>
 <div id="overlay"></div>
@@ -1179,13 +1209,10 @@
 	<link rel="stylesheet" href="css/main.min.css">
 	<script src="js/scripts.min.js"></script>
 <script>
-
         $('.btn').click(function(){
             var product = $(this).attr('data-product');
            $('input[name="product"]').val(product);
 			});
-
-//	 )});
 </script>
 	<script src="js/constructor.js"></script>
 
